--- a/react/styling-react/src/SassComponent.scss
+++ b/react/styling-react/src/SassComponent.scss
@@ -1,4 +1,6 @@
 @import './styles/utils';
+@import '~include-media/dist/include-media';
+@import '~open-color/open-color';
 
 //주목해야할점은 sass는 클래스내에 클래스를 정의할 수 잇습니다. 예를들어 .box .inbox{} =>
 /*
@@ -12,6 +14,10 @@
 */
 .SassComponent{
     display:flex;
+    background:$oc-gray-2;
+    @include media('<768px'){
+        background:$oc-gray-9;
+    }
     
     .box{
         background:red;
